# remote-attest-test-server

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
proto/attest/: attest.pb.go  attest.proto  attest_grpc.pb.go
server/: main.go
src/: main.rs
