[package]
name = "remote-attest-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tdx-attest-rs = { version = "0.1.2", git = "https://github.com/intel/SGXDataCenterAttestationPrimitives.git", rev = "aa239d25a437a28f3f4de92c38f5b6809faac842" }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
jsonrpsee = { version = "0.24.7", features = ["macros", "server"] }
jsonrpsee-types = "0.24.5"
serde = "1.0.217"
